# bigboyman

./: Dockerfile  generator.py  main.py  requirements.txt  sales_bot.py
data/: baselines.json
filter/: CMakeLists.txt  Dockerfile  main.cpp
scraper/: Dockerfile  app.py  requirements.txt
